--- a/app/src/css/global/colors.css
+++ b/app/src/css/global/colors.css
@@ -7,6 +7,7 @@
 
     --opace-gray: #3131312c;
     --opace-red: rgb(255, 185, 185);
+    --danger: #bb001f;
 
     --main-accent: var(--purple);
     --main-dark: var(--dark-purple);
