--- a/app/src/css/loginForm/loginForm.css
+++ b/app/src/css/loginForm/loginForm.css
@@ -45,14 +45,16 @@
 /*INPUTS*/
 .login_form__input {
     display: flex;
+    flex-direction: column;
     position: relative;
-    align-items: center;
+    align-items: start;
     gap: 1rem;
     width: 100%;
 }
-
 .login_form__input label {
-    flex: 1 0 90px;
+    text-align: start;
+    justify-content: start;
+    transition: color 0.4s ease;
 }
 
 .login_form__input input {
@@ -60,13 +62,28 @@
     padding: 8px;
     width: 100%;
     border-radius: 0.5rem;
+    border: 2px solid transparent;
+    transition: border 0.4s ease;
 }
+
+/* ERROR  */
+.login_form__input.--error {
+    color: var(--danger);
+}
+
+.--error input {
+    border: 2px solid var(--danger);
+}
+
+/* --- ERROR --- */
+
 /* -- INPUTS -- */
 
 /*BUTTONS*/
 .login_form__buttons {
     display: flex;
     justify-content: space-between;
+    gap: 2rem;
 }
 
 .login_form__back_button,
